# ZMQ

./: .gitignore  CMakeLists.txt
include/: header.h
src/: main.c  server.c
tests/: client  server
